<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/container_header_height"
    android:layout_marginStart="@dimen/container_header_margin" >

    <Button
        android:id="@+id/hubBtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_width="@dimen/container_quickjump_width"
        android:layout_height="@dimen/toolbar_buttonheight"
        android:text="@string/section_toolbar_hub"
        android:textSize="@dimen/container_button_textsize"
        android:layout_margin="@dimen/toolbar_padding"
        android:nextFocusRight="@+id/sortBtn"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        android:focusableInTouchMode="true"
        android:clickable="true"/>

    <Button
        android:id="@+id/sortBtn"
        android:layout_toEndOf="@id/hubBtn"
        android:layout_width="@dimen/container_quickjump_width"
        android:layout_height="@dimen/toolbar_buttonheight"
        android:layout_alignParentBottom="true"
        android:text="@string/section_toolbar_sort"
        android:textSize="@dimen/container_button_textsize"
        android:nextFocusRight="@+id/filterBtn"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true" />

    <TextView
        android:id="@+id/sortText"
        android:layout_above="@id/sortBtn"
        android:layout_toEndOf="@id/hubBtn"
        android:layout_width="@dimen/container_quickjump_width"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/container_item_textsize"
        tools:text="Title"/>

    <Button
        android:id="@+id/filterBtn"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/sortBtn"
        android:layout_width="@dimen/container_quickjump_width"
        android:layout_height="@dimen/toolbar_buttonheight"
        android:text="@string/section_toolbar_filter"
        android:textSize="@dimen/container_button_textsize"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true" />

    <TextView
        android:id="@+id/filterText"
        android:layout_above="@id/filterBtn"
        android:layout_toEndOf="@id/sortText"
        android:layout_width="@dimen/container_quickjump_width"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/container_item_textsize"
        tools:text="All"/>


</RelativeLayout>