<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:visibility="visible">

    <RelativeLayout
        android:layout_width="@dimen/nextup_text_width"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/nextup_view_padding_small"
        android:background="?attr/card_normal" >

        <RelativeLayout
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingStart="@dimen/nextup_view_padding"
            android:paddingEnd="@dimen/nextup_view_padding" >

            <TextView
                android:id="@+id/nextup_title"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:scrollHorizontally="true"
                tools:text="Title is a little long here but it is a test" />
            <TextView
                android:id="@+id/nextup_subtitle"
                android:textSize="@dimen/nextup_view_textsize_secondary"
                android:layout_alignParentStart="true"
                android:layout_below="@id/nextup_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:scrollHorizontally="true"
                tools:text="Subtitle"/>
            <TextView
                android:id="@+id/nextup_minutes"
                android:textSize="@dimen/nextup_view_textsize_tiertiery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/nextup_subtitle"
                tools:text="Mins"/>
            <TextView
                android:id="@+id/nextup_content"
                android:textSize="@dimen/nextup_view_textsize_tiertiery"
                android:layout_alignParentStart="true"
                android:layout_below="@id/nextup_subtitle"
                android:layout_toStartOf="@id/nextup_minutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:scrollHorizontally="true"
                tools:text="Content"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/btns"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nextup_btn_height"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/playbtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/ic_play_arrow_white_48dp" />

            <ImageButton
                android:id="@+id/cancelbtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/lb_ic_stop" />

            <ImageButton
                android:id="@+id/browsebtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/ic_playlist_play_white_48dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/nextup_summary"
            android:textSize="@dimen/nextup_view_textsize_tiertiery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/topbar"
            android:layout_above="@id/btns"
            android:background="?attr/card_normal"
            android:paddingTop="@dimen/nextup_view_padding_small"
            android:paddingStart="@dimen/nextup_view_padding"
            android:paddingEnd="@dimen/nextup_view_padding"
            android:paddingBottom="@dimen/nextup_view_padding_small"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum." />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/card_normal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/nextup_poster"
            android:background="?attr/card_normal"
            android:contentDescription="@string/nextup_poster"
            android:layout_height="@dimen/nextup_poster_height"
            android:layout_width="@dimen/nextup_poster_width"
            android:paddingTop="@dimen/nextup_view_padding_small"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/nextup_view_padding_small"
            android:scaleType="fitXY"
            tools:src="@drawable/default_video_cover"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/nextup_view_padding_small"
            android:paddingBottom="@dimen/nextup_view_padding_small" >

            <TextView
                android:textSize="@dimen/nextup_view_textsize_secondary"
                android:textAlignment="center"
                android:text="@string/nextup_comingup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/upnext_time"
                android:textSize="@dimen/nextup_view_textsize_secondary"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text=" 00 " />

            <TextView
                android:textSize="@dimen/nextup_view_textsize_secondary"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nextup_comingup_seconds" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>